# buoy_examples

./: .gitignore  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
.github/workflows/: build-and-test.sh  ci.yml
buoy_examples/: bias_damping.py  damping_selector.py  torque_controller.py
config/: pb_gain_scheduler.yaml  pb_nl_bias_damping.yaml  pb_torque_controller.yaml
include/JustInterp/: CPPLINT.cfg  JustInterp.hpp
include/buoy_examples/: controller.hpp  torque_control_policy.hpp  torque_controller.hpp
include/pbcontrol/: PBController.hpp
launch/: bias_damping_py.launch.py  gain_scheduler.launch.py  torque_controller.launch.py  torque_controller_cpp.launch.py  torque_controller_py.launch.py
scripts/: bias_damping.py  gain_scheduler_node.py  torque_controller.py
src/: torque_controller.cpp
